force-app/main/default/src/objects/echosign_dev1__Environment_Settings__c/fields/echosign_dev1__Config_URL__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Config_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Config URL</label>
    <type>Url</type>
</CustomField>