force-app/main/default/src/objects/echosign_dev1__Environment_Settings__c/fields/echosign_dev1__Environment_Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Environment_Name__c</fullName>
    <description>Set to Production, Stage, AWSPreview, Preview or Demo. Leave blank to stay on production.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Set to Production, Stage, AWSPreview, Preview or Demo. Leave blank to stay on production.</inlineHelpText>
    <label>Environment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>